--- a/Homeworks/FLEX_HW/styles.css
+++ b/Homeworks/FLEX_HW/styles.css
@@ -20,12 +20,12 @@ main{
       .H1{
         width: 150px;
         margin: 5px;
-     
+        float: left;
       }
       .href{
         width: 100%;
         text-align: center;
-       
+        float: right;
       
       }
       .href a{
@@ -37,7 +37,6 @@ main{
       }
       
       .filters{
- 
         margin-top: 150px;
         color: #1A5276;
         width: 200px;
@@ -52,19 +51,16 @@ main{
             flex-wrap: wrap;
             flex-direction: row;
             justify-content: center;
-            margin-top: 150px;
-            margin-left: 250px;
-            align-content: stretch;
       }
 
-        .Card{
+        .Belarus, .Marriot, .DoubleTree, .Atlantis, .Burj, .Country-side{
             border: solid 1px #1A5276;
             border-radius: 10px;
             width: 300px;
             height: 350px;
-            align-content: stretch;
-            margin: 10px;
-           
+            margin-top: 150px;
+            margin-left: 180px;
+            align-content: center;
             flex-direction: row;
           
             
@@ -79,10 +75,33 @@ main{
             margin-left: 50px;
             
         }
-        .Card ul li:before{
+        .Belarus ul li:before{
             content: '\203A';
      
         }
-       
+        .Marriot ul li:before{
+            content: '\203A';
+     
+        }
+        .DoubleTree ul li:before{
+            content: '\203A';
+     
+        }
+        .Atlantis ul li:before{
+            content: '\203A';
+     
+        }
+        .Burj ul li:before{
+            content: '\203A';
+     
+        }
+        .Country-side ul li:before{
+            content: '\203A';
+     
+        }
 
+
+
+   
+      
 }
