--- a/Homeworks/PlaneAnimate_DEMO/styles.css
+++ b/Homeworks/PlaneAnimate_DEMO/styles.css
@@ -1,4 +1,5 @@
 
+
 *{
     margin: 0;
     padding: 0;
@@ -72,18 +73,16 @@ img{
         color: rgb(30,48,80);
         
       }
-      ul::after{
-        content: '';
-        clear: both;
-        display: block;
-      }
+     
      .dropdown> ul>li{
         float: left;
         position: relative;
         cursor:pointer;
+       
       }
       li{
         list-style: none;
+        
       }
       a:hover, .dropdown:hover{
         background:  rgb(244, 245, 245);
@@ -92,21 +91,28 @@ img{
         display: inline-block;
         position: relative;
         cursor:pointer;
+       
+        
       }
       .dropdown-content{
         display: none;
         position: absolute;
-        min-width: 250px;
-        min-height: 250px;
-        background:   rgb(244, 245, 245);
+        min-width: 133px;
+        height: 100px;
+        background:   rgb(143, 204, 233);
+        overflow-y: scroll;
+       
+        
         
       }
       .dropdown-content a:hover{
         background: rgba(244, 245, 245, 0.74);
         
+        
       }
       .dropdown:hover .dropdown-content{
         display: block;
+       
        
       }
      
@@ -148,7 +154,7 @@ img{
         -webkit-transform: scale(1.2);
         transform: scale(1.2);
         filter: saturate(200%);
-        opacity: none;
+        opacity: 1;
       }
       
 
@@ -168,4 +174,6 @@ img{
        .select-menu{
         width: 100px;
       }
+
+
 
